2012-05-16  Kenichi Ishibashi  <bashi@chromium.org>

        [Chromium] WebTransformationMatrixTest.verifyDefaultConstructorCreatesIdentityMatrix is failing
        https://bugs.webkit.org/show_bug.cgi?id=86589

        Reviewed by Kent Tamura.

        * chromium/public/WebTransformationMatrix.h: Added destructor.
        (WebTransformationMatrix):

2012-05-15  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r117204.
        http://trac.webkit.org/changeset/117204
        https://bugs.webkit.org/show_bug.cgi?id=86559

        causing win compilation failures (Requested by pilgrim_google_
        on #webkit).

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        * chromium/public/WebMessagePortChannel.h: Removed.
        * chromium/public/WebMessagePortChannelClient.h: Removed.

2012-05-15  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move createMessagePortChannel to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=85764

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::createMessagePortChannel):
        * chromium/public/WebMessagePortChannel.h: Added.
        (WebKit):
        (WebMessagePortChannel):
        (WebKit::WebMessagePortChannel::~WebMessagePortChannel):
        * chromium/public/WebMessagePortChannelClient.h: Added.
        (WebKit):
        (WebMessagePortChannelClient):
        (WebKit::WebMessagePortChannelClient::~WebMessagePortChannelClient):

2012-05-15  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move blobRegistry to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=85765

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):