@@ -1,3 +1,14 @@
+2012-05-16  Dana Jansens  <danakj@chromium.org>
+
+        [chromium] Clear the m_private pointer when destroying WebFilterOperations to avoid assert in WebPrivateOwnPtr
+        https://bugs.webkit.org/show_bug.cgi?id=86654
+
+        Reviewed by James Robinson.
+
+        * chromium/public/WebFilterOperations.h:
+        (WebKit::WebFilterOperations::~WebFilterOperations):
+        (WebFilterOperations):
+
 2012-05-16  Kenichi Ishibashi  <bashi@chromium.org>
 
         [Chromium] WebTransformationMatrixTest.verifyDefaultConstructorCreatesIdentityMatrix is failing
